# osrframework

./: .env.example  .gitignore  AUTHORS.md  CHANGES  CHANGES.md  CHANGES.txt  CONTRIBUTING.md  Cargo.toml  Dockerfile  HACKING.md  INSTALL.md  LICENSE  MANIFEST  MANIFEST.in  README.md  README.rst  TOKEN_FETCH_README.md  _toinclude.txt  config.toml.example  configure_maltego.py  files.txt  pyproject.toml  requirements.txt  setup.py
config/: accounts.cfg  api_keys.cfg  browser.cfg  general.cfg  network.cfg  osrframework-maltego.mtz
config/plugins/: pattern.py.sample  wrapper.py.sample  wrapper_v2.py
crates/meteora-damm/: Cargo.toml  idl.json
crates/meteora-damm/src/: lib.rs
crates/meteora-vault/: Cargo.toml  idl.json
crates/meteora-vault/src/: lib.rs
doc/: ADVANCED_CONFIGURATION.md  ALIAS_GENERATOR.md  API.md  CHANGES.md  ENTIFY.md  FAQ.md  HACKING.md  INSTALL.md  MAILFY.md  MALTEGO_CONFIGURATION.md  OSRFCONSOLE.md  OSRFRAMEWORK_SERVER.md  PHONEFY.md  SEARCHFY.md  USAGE_WITH_DOCKER.md  USUFY.md
osrframework/: .__init__.py.swp  .gitignore  __init__.py  alias_generator.py  checkIfHashIsCracked.py  checkInSkype.py  checkfy.py  denis  domainfy.py  entify-launcher.py  entify.py  enumeration.py  explorify.py  launcher.py  logger.py  mailfy.py  osrfconsole.py  osrframework-server.py  osrframework_server.py  phonefy-launcher.py  phonefy.py  searchfy.py  upgrade.py  usufy-launcher.py  usufy.py
osrframework-0.10.0b0/: setup.py
osrframework-0.10.0b0/osrframework/: __init__.py  enumeration.py  mailfy.py  usufy.py
osrframework-0.10.0b0/osrframework/patterns/: dni.py
osrframework-0.10.0b0/osrframework/thirdparties/: checkIfEmailWasHacked.py
osrframework-0.10.0b0/osrframework/utils/: banner.py  benchmark.py
osrframework/api/: 037c14ba67a3452_friends.csv  03903181d9ca440_friends.csv  0samer5161_friends.csv  1059hks_friends.csv  119d7e31083947c_friends.csv  1_hzam_friends.csv  _Mujahideen__friends.csv  __init__.py  __laith_friends.csv  _abdulwahhab_friends.csv  _amamr__friends.csv  _sunbl_friends.csv  _yaser00_friends.csv  twitter_api.py
osrframework/domains/: __init__.py  brand_tld.py  cctld.py  email_providers.py  generic_tld.py  geographic_tld.py  gtld.py  other_subdomains.py
osrframework/entify/: __init__.py  config_entify.py  processing.py
osrframework/maltfy/: Local.tas  __init__.py  aliasToFamousPlatforms.py  aliasToSkypeAccounts.py  bitcoinAddressToBlockchainDetails.py  configure_maltego.py  constants.py  coordinatesToGoogleMapsBrowser.py  coordinatesToTwitterBrowser.py  domainToGoogleSearchUriWithEmails.py  domainToTld.py  emailToAlias.py  emailToBreachedAccounts.py  emailToDomain.py  emailToSkypeAccounts.py  expandPropertiesFromI3visioEntity.py  extractAllEntitiesFromText.py  hashToMD5crackDotCom.py  ipToIp_ApiInformation.py  maltego.py  phoneToMoreInfo.py  phoneToPerson.py  textToEntities.py  textToGoogleSearchUri.py  uriToBrowser.py  uriToDomain.py  uriToEntities.py  uriToPort.py  uriToProtocol.py
osrframework/patterns/: __init__.py  bitcoinaddress.py  dogecoinaddress.py  email.py  ipv4.py  litecoinaddress.py  peercoinaddress.py  sha1.py  uri.py
osrframework/phonefy/: __init__.py  config_phonefy.py  listspam.py  platforms.py  processing.py
osrframework/searchengines/: __init__.py  google.py
osrframework/templates/: _banner.html  _footer.html  _keshif-headers.html  _menu-launcher.html  _menu-research.html  _menu-top.html  _options-export.html  _options-other.html  _options-platforms.html  _research-terminal.html  _shared-headers.html  error.html  explore.html  home.html  research-domainfy.html  research-mailfy.html  research-phonefy.html  research-searchfy.html  research-usufy.html  research.html
osrframework/thirdparties/: __init__.py  blockchain.py  checkIfHashIsCracked.py  checkInSkype.py  checkIpDetails.py  checkIpFromAlias.py  checkPhoneDetails.py  getBitcoinAddressDetails.py  md5crack.py  setup.py  skype.py
osrframework/transforms/: __init__.py  aliasToKnownDomains.py  aliasToKnownEmails.py  aliasToSkypeIP.py  coordinatesToTwitterBrowser.py  domainToGoogleSearchUriWithEmails.py  domainToTld.py  emailToAlias.py  emailToBreachedAccounts.py  emailToDomain.py  emailToSkypeAccounts.py  expandPropertiesFromI3visioEntity.py  hashToMD5crackDotCom.py  hashToMD5dbDotNet.py  ipToIp_ApiInformation.py  phoneToMoreInfo.py  phoneToPerson.py  textToEntities.py  textToPlatformSearch.py  uriToBrowser.py  uriToDomain.py  uriToEntities.py  uriToPort.py  uriToProtocol.py
osrframework/usufy/: __init__.py  config_usufy.py  processing.py
osrframework/utils/: __init__.py  banner.py  benchmark.py  browser.py  config_api_keys.py  config_api_keys.py.sample  config_credentials.py  config_credentials.py.sample  configuration.py  credentials.py  enumeration_config.txt  errors.py  exceptions.py  export.py  fortunes.py  general.py  global_api.py  logger.py  platform_selection.py  platforms.py  regexp.py  regexp_selection.py  timeout.py  updates.py
osrframework/wrappers/: __demo.py.sample  __demo_twitter.py  __init__.py  abou.py  about.py  adtriboo.py  affilorama.py  ahmia.py  anarchy101.py  angel.py  aporrealos.py  apsense.py  archive.py  arduino.py  ariva.py  armorgames.py  artbreak.py  artician.py  arto.py  askfm.py  audiob.py  audioboo.py  audioboom.py  authorstream.py  autospies.py  backyardchickens.py  badoo.py  bandcamp.py  bebee.py  behance.py  bennugd.py  betblog.py  bitbacker.py  bitbucket.py  bitcointa.py  bitcointalk.py  bitly.py  bitrated.py  blackplanet.py  bladna.py  (+358 more)
res/: alias_generator.py.desktop  entify.py.desktop  mailfy.py.desktop  phonefy.py.desktop  searchfy.py.desktop  usufy.desktop  usufy.py.desktop
src/: config.rs  lib.rs  main.rs
src/chain/: constants.rs  mod.rs  pools.rs  refresh.rs  token_fetch.rs  token_price.rs  transaction.rs
src/core/: bot.rs  mod.rs
src/dex/: mod.rs
tmp/: osrframework_0.9.0rc-1.dsc  osrframework_0.9.0rc-1_source.build  osrframework_0.9.0rc-1_source.changes  osrframework_0.9.0rc-1_source.ppa.upload
tmp/osrframework-0.9.0rc/: .gitignore  CHANGES.txt  README.md  configure_maltego.py  ez_setup.py  setup.py
(+885 files in other folders)
