[package]
name = "solana-mev-bot"
version = "0.1.0"
edition = "2021"
description = "A Solana MEV bot"
repository = "https://github.com/i3visio/solana-mev-bot"
license = "MIT"

[[bin]]
name = "solana-mev-bot"
path = "src/main.rs"

[dependencies]
# Core Solana dependencies
solana-sdk = "1.16.25"
solana-client = "1.16.25"
solana-program = "1.16.25"
solana-account-decoder = "1.16.25"
solana-transaction-status = "1.16.25"

# SPL token support
spl-token = { version = "3.5.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "1.1.3", features = [
    "no-entrypoint",
] }

# Serialization/deserialization
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
dotenv = "0.15"

# Async runtime
tokio = { version = "1.32", features = ["full"] }
futures = "0.3"

# Utilities
anyhow = "1.0"
thiserror = "1.0"
rand = "0.8"
bs58 = "0.4"
borsh = "0.10.3"
bytemuck = { version = "1.15.0", features = ["derive"] }
anchor-lang = "0.31.1"
arrayref = "0.3.7"
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"

# Command line argument parsing (removed - no longer needed)
# clap = { version = "3.2", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

meteora-damm-cpi = { path = "crates/meteora-damm", features = ["no-entrypoint"] }
meteora-vault-cpi = { path = "crates/meteora-vault", features = ["no-entrypoint"] }